refactor - 상품 목록을 반환할 때 현재 페이지 등을 반환 하도록 구현 #10
- 페이지, 총 개수, 첫 & 마지막 페이지 여부 등