@@ -16,15 +16,23 @@ public class ItemConverter {
                 .category(item.getCategory().getName())
                 .stock(item.getStock())
                 .price(item.getPrice())
-                .DiscountPrice(0)   // TODO: 할인 어떻게?
+                .discountPrice(0)   // TODO: 할인 어떻게?
                 .imageUrl(null)
                 .build();
     }
 
-    public static List<ItemResponseDTO.Item> toItemList (Page<Item> itemPage) {
-        return itemPage.stream()
+    public static ItemResponseDTO.ItemList toItemList (Page<Item> itemPage) {
+        List<ItemResponseDTO.Item> itemList = itemPage.stream()
                 .map(ItemConverter::toItemResponseDTO)
-                .collect(Collectors.toList());
-    }
+                .toList();
 
+        return ItemResponseDTO.ItemList.builder()
+                .listSize(itemPage.getSize())
+                .page(itemPage.getTotalPages())
+                .totalElement(itemPage.getTotalElements())
+                .isFirst(itemPage.isFirst())
+                .isLast(itemPage.isLast())
+                .itemList(itemList)
+                .build();
+    }
 }
